# texture-atlas-packer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build-release.yml  cmake-linux-build.yml  cmake-windows-build.yml
source/: CMakeLists.txt  application.cpp  application.hpp  application_config.cpp  application_config.hpp  image_file_io.cpp  image_file_io.hpp  main.cpp
